--- a/src/chirp_ui/templates/chirpui/state_primitives.html
+++ b/src/chirp_ui/templates/chirpui/state_primitives.html
@@ -13,9 +13,7 @@
     src="/static/islands/state_sync.js",
     cls=cls,
     primitive="state_sync"
-) %}
-    {% slot %}
-{% end %}
+) %}{% end %}
 {% end %}
 
 {% def action_queue(action_id, mount_id=none, cls="") %}
@@ -26,9 +24,7 @@
     src="/static/islands/action_queue.js",
     cls=cls,
     primitive="action_queue"
-) %}
-    {% slot %}
-{% end %}
+) %}{% end %}
 {% end %}
 
 {% def draft_store(draft_key, mount_id=none, cls="") %}
@@ -39,9 +35,7 @@
     src="/static/islands/draft_store.js",
     cls=cls,
     primitive="draft_store"
-) %}
-    {% slot %}
-{% end %}
+) %}{% end %}
 {% end %}
 
 {% def error_boundary(boundary_id, mount_id=none, cls="") %}
@@ -52,9 +46,7 @@
     src="/static/islands/error_boundary.js",
     cls=cls,
     primitive="error_boundary"
-) %}
-    {% slot %}
-{% end %}
+) %}{% end %}
 {% end %}
 
 {% def grid_state(state_key, columns, mount_id=none, cls="") %}
@@ -65,9 +57,7 @@
     src="/static/islands/grid_state.js",
     cls=cls,
     primitive="grid_state"
-) %}
-    {% slot %}
-{% end %}
+) %}{% end %}
 {% end %}
 
 {% def wizard_state(state_key, steps, mount_id=none, cls="") %}
@@ -78,9 +68,7 @@
     src="/static/islands/wizard_state.js",
     cls=cls,
     primitive="wizard_state"
-) %}
-    {% slot %}
-{% end %}
+) %}{% end %}
 {% end %}
 
 {% def upload_state(state_key, endpoint, mount_id=none, cls="") %}
@@ -91,7 +79,5 @@
     src="/static/islands/upload_state.js",
     cls=cls,
     primitive="upload_state"
-) %}
-    {% slot %}
-{% end %}
+) %}{% end %}
 {% end %}
